corrigido body e posicionamento background

--- a/exercicio05/style.css
+++ b/exercicio05/style.css
@@ -1,16 +1,21 @@
 body{
     color: black;
+    max-width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container1{
-    background-image: url(./src/img/slide01/imagem.png);
-    max-width: 1920px;
+    background: url(./src/img/slide01/imagem.png) no-repeat;
+    width: 1920px;
     height: 1080px;
-    padding: 10em;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    padding-left: 10rem;
 }
 .setaEsquerda{
-    background-image: url(./src/img/slide01/seta-esquerda.png);
+    background: url(./src/img/slide01/seta-esquerda.png);
 }
 .setaDireita{
     background-image: url(./src/img/slide01/seta-direita.png);
@@ -20,6 +25,7 @@ body{
     height: 18em;
     width: 17em;
     padding: 12px;
+    margin: 10px;
     display: flex;
     flex-direction: column;
 }
